# r-sidis

./: Carbon.csv  Carbon_luminosity copy.csv  Carbon_luminosity.csv  LD2.csv  LD2_luminosity.csv  LH2.csv  LH2_luminosity.csv  Luminosity_scan_Carbon.ipynb  Luminosity_scan_LD2.ipynb  Luminosity_scan_LH2.ipynb  README.md  Rsidis_SimvsData_rates.ipynb  SIDIS_LD2_boost.ipynb  SIDIS_LH2.ipynb  SIDIS_LH2_all.ipynb  SIDIS_LH2_boost.ipynb  SIDIS_LH2_combined.ipynb  data_vs_sim_round2.ipynb  data_vs_sim_round3.ipynb  pyproject.toml
RCtables/: rctable.csv
histogram_builder/: __init__.py  core.py
histogram_builder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
